# harness_test

./: .env.example  .gitignore  CLAUDE.md  CODE.md  README.md  pyproject.toml
.cursor/rules/: gategrid-phase-workflow.mdc
.github/workflows/: evals.yml  gategrid.yml  gategrid.yml.example
docs/: README.md  _build_report_viz.py  hashline_hypothesis_report.ipynb  hashline_hypothesis_report.md
docs/adr/: 0001-gategrid-phase0-schemas-cli-gate.md  0002-gategrid-phase1-packaging-validate.md  0003-gategrid-phase2-executor.md  0004-gategrid-phase3-evaluators-contrib.md  0005-gategrid-file-edit-batteries.md  0006-gategrid-phase4-mcp-path.md
docs/roadmap/: README-pitch-draft.md  adoption-usability-backlog.md  architecture-vision.md  battlecard.md  competitive-landscape.md  dogfood-notes.md  v1-implementation-checklist.md
evals/adapters/: __init__.py  file_edit.py
evals/matrices/: hashline-bench.yaml  hashline-gate.yaml  hashline-smoke.yaml  parity-add_docstring_large.yaml  parity-indent_collision.yaml
evals/models/: minimax-m2.7.yaml
evals/profiles/: baseline.yaml  opencrabs_h1_docs.yaml  opencrabs_h2_fuzzy.yaml  opencrabs_h3_collision.yaml  opencrabs_original.yaml
examples/dogfood/: README.md
examples/file_edit/: README.md
examples/gategrid/: README.md
experiments/cases/: hello_world.yaml
src/gategrid/: cases.py  (+14 more)
tests/: conftest.py  test_config.py  test_demo_integration.py  test_demo_model.py  test_fuzzy_replace.py  test_gategrid_cli_output.py  test_gategrid_file_edit_batteries.py  test_gategrid_file_edit_cases.py  test_gategrid_integrations_pydantic_ai.py  test_gategrid_models_env.py  test_gategrid_phase0.py  test_gategrid_phase1.py  test_gategrid_phase2.py  test_gategrid_phase3.py  test_gategrid_phase4.py  test_gategrid_spike_c.py  test_load_tooling.py  test_matrices.py  test_sandbox.py
(+108 files in other folders)
