[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-test"
version = "0.1.0"
description = "Evaluation harness for LLM file-editing agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai,logfire]>=0.2.0",
    "pydantic-evals>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
harness-matrix = "harness.matrix:main"
harness-evals = "harness.evals_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
report = ["pandas>=2.0", "matplotlib>=3.8", "jupyter>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
