[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gategrid"
version = "0.0.0"
description = "Matrix evaluation harness with CI gating and git-native baselines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gategrid = "gategrid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gategrid*"]

[tool.setuptools.package-data]
gategrid = ["contrib/file_edit/bundled/**/*.yaml"]

[project.optional-dependencies]
pydantic-ai = ["pydantic-ai-slim[openai,logfire]>=1.0.0"]
anthropic = ["pydantic-ai-slim[anthropic]"]
google = ["pydantic-ai-slim[google]"]
all-providers = ["pydantic-ai-slim[openai,anthropic,google,logfire]"]
mcp = ["mcp>=1.12.4"]
dev = ["pytest>=9.0"]
report = ["pandas>=2.0", "matplotlib>=3.8", "jupyter>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
